Can now be build on VS via CMake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,29 @@
 
+add_definitions (
+	-D__STDC_LIMIT_MACROS
+	-D__STDC_CONSTANT_MACROS
+	-D_CXX
+)
+
+if ( WIN32 )
+	add_definitions (
+		-D_WINDLL
+		-D_WIN
+	)
+endif ()
+
+if ( NOT MSVC )
+	set (
+		CMAKE_CXX_FLAGS
+		"${CMAKE_CXX_FLAGS} -W -Wall -Wno-unused-parameter"
+	)
+else ()
+	set (
+		CMAKE_CXX_FLAGS
+		"${CMAKE_CXX_FLAGS} /wd4146 /D_CRT_SECURE_NO_WARNINGS /D_SCL_SECURE_NO_WARNINGS"
+	)
+endif ()
+
 file (
 	GLOB_RECURSE
 	source_files
@@ -11,38 +36,27 @@ add_library (
 	${source_files}
 )
 
-add_definitions (
-	-D__STDC_LIMIT_MACROS
-	-D__STDC_CONSTANT_MACROS
-	-D_CXX
-)
-
-if (WIN32)
-	add_definitions (
-		-D_WINDLL
-		-D_WIN
-	)
-endif ()
-
-set (
-	CMAKE_CXX_FLAGS
-	"${CMAKE_CXX_FLAGS} -W -Wall -Wno-unused-parameter"
-)
-
-include_directories ( ${LLVM_ROOT}/include )
-link_directories ( ${LLVM_ROOT}/lib )
 llvm_map_components_to_libraries ( REQ_LLVM_LIBRARIES bitwriter core interpreter jit native target )
 
 target_link_libraries ( LLVMREGen ${REQ_LLVM_LIBRARIES} )
 
-if (UNIX)
+if ( UNIX )
 	target_link_libraries ( LLVMREGen dl pthread )
 endif ()
 
-install (
-	TARGETS LLVMREGen
-	DESTINATION lib
-)
+if ( WIN32 )
+	install (
+		TARGETS LLVMREGen
+		DESTINATION bin
+		ARCHIVE DESTINATION lib
+	)
+else ()
+	install (
+		TARGETS LLVMREGen
+		DESTINATION lib
+	)
+endif ()
+
 install (
 	FILES LLVMREGen-c.h  LLVMREGen-c-llvm.h  LLVMREGen.h
 	DESTINATION include
