--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,16 +3,19 @@ cmake_minimum_required (VERSION 2.8)
 project (LLVMREGen)
 
 if ( WIN32 )
-	set ( LLVM_ROOT "C:\Program Files\LLVM" CACHE PATH "Root of LLVM install." )
+	set ( LLVM_ROOT "C:\\Program Files\\LLVM" CACHE PATH "Root of LLVM install." )
 else ()
 	set ( LLVM_ROOT "/usr/" CACHE PATH "Root of LLVM install." )
 endif ()
 
-if ( NOT EXISTS ${LLVM_ROOT}/include/llvm )
-	message ( FATAL_ERROR "LLVM_ROOT (${LLVM_ROOT}) is not a valid LLVM install" )
+if ( NOT EXISTS ${LLVM_ROOT}/include/llvm OR NOT EXISTS ${LLVM_ROOT}/lib )
+	message ( FATAL_ERROR "LLVM_ROOT (${LLVM_ROOT}) is not a valid LLVM install, please set it to a valid LLVM install directory !" )
 endif ()
 set ( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_ROOT}/share/llvm/cmake" )
 include ( LLVM )
+
+include_directories ( ${LLVM_ROOT}/include )
+link_directories ( ${LLVM_ROOT}/lib )
 
 add_subdirectory ( src )
 
