--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,11 @@ project (LLVMREGen)
 if ( WIN32 )
 	set ( LLVM_ROOT "C:\\Program Files\\LLVM" CACHE PATH "Root of LLVM install." )
 else ()
-	set ( LLVM_ROOT "/usr/" CACHE PATH "Root of LLVM install." )
+	if ( EXISTS /usr/local/include/llvm )
+		set ( LLVM_ROOT "/usr/local" CACHE PATH "Root of LLVM install." )
+	else ()
+		set ( LLVM_ROOT "/usr/" CACHE PATH "Root of LLVM install." )
+	endif ()
 endif ()
 
 if ( NOT EXISTS ${LLVM_ROOT}/include/llvm OR NOT EXISTS ${LLVM_ROOT}/lib )
