New abstraction and interpreter use. DOES NOT WORK YET

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,11 @@ cmake_minimum_required (VERSION 2.8)
 project (LLVMREGen)
 
 if ( WIN32 )
-	set ( LLVM_ROOT "C:\\Program Files\\LLVM" CACHE PATH "Root of LLVM install." )
+	if ( EXISTS "C:\\Program Files (x86)\\LLVM" )
+		set ( LLVM_ROOT "C:\\Program Files (x86)\\LLVM" CACHE PATH "Root of LLVM install." )
+	else ()
+	    set ( LLVM_ROOT "C:\\Program Files\\LLVM" CACHE PATH "Root of LLVM install." )
+	endif ()
 else ()
 	if ( EXISTS /usr/local/include/llvm )
 		set ( LLVM_ROOT "/usr/local" CACHE PATH "Root of LLVM install." )
@@ -15,6 +19,7 @@ endif ()
 if ( NOT EXISTS ${LLVM_ROOT}/include/llvm OR NOT EXISTS ${LLVM_ROOT}/lib )
 	message ( FATAL_ERROR "LLVM_ROOT (${LLVM_ROOT}) is not a valid LLVM install, please set it to a valid LLVM install directory !" )
 endif ()
+
 set ( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${LLVM_ROOT}/share/llvm/cmake" )
 include ( LLVM )
 
