--- a/Test/DevelMain/CMakeLists.txt
+++ b/Test/DevelMain/CMakeLists.txt
@@ -1,10 +1,10 @@
 
-include_directories ( ../../src/ )
+include_directories ( BEFORE ../../src/ )
 
 add_executable ( Test_Devel TestMain.cpp ${source_files} )
 
 llvm_map_components_to_libraries ( REQ_LLVM_LIBRARIES bitwriter core interpreter jit native target )
-target_link_libraries ( Test_Devel ${REQ_LLVM_LIBRARIES} )
+target_link_libraries ( Test_Devel ${REQ_LLVM_LIBRARIES} ffi )
 
 if ( UNIX )
 	target_link_libraries ( Test_Devel dl pthread )
