--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -30,36 +30,66 @@ file (
 	*
 )
 
-add_library (
-	LLVMREGen
-	SHARED
-	${source_files}
-)
+llvm_map_components_to_libraries ( REQ_LLVM_LIBRARIES bitwriter core bitwriter interpreter jit native target )
 
-if ( BUILD_TESTS )
+if ( LLVMREGEN_BUILD_SHARED_LIBRARY )
+	add_library (
+		LLVMREGen
+		SHARED
+		${source_files}
+	)
+	
+	target_link_libraries ( LLVMREGen ${REQ_LLVM_LIBRARIES} )
+
+	if ( UNIX )
+		target_link_libraries ( LLVMREGen dl pthread )
+	endif ()
+	
+	if ( WIN32 )
+		install (
+			TARGETS LLVMREGen
+			DESTINATION bin
+			ARCHIVE DESTINATION lib
+		)
+	else ()
+		install (
+			TARGETS LLVMREGen
+			DESTINATION lib
+		)
+	endif ()
+endif ()
+
+if ( LLVMREGEN_BUILD_STATIC_LIBRARY )
+	add_library (
+		LLVMREGen-s
+		STATIC
+		${source_files}
+	)
+
+	target_link_libraries ( LLVMREGen-s ${REQ_LLVM_LIBRARIES} )
+
+	if ( UNIX )
+		target_link_libraries ( LLVMREGen-s dl pthread )
+	endif ()
+	
+	if ( WIN32 )
+		install (
+			TARGETS LLVMREGen-s
+			DESTINATION bin
+			ARCHIVE DESTINATION lib
+		)
+	else ()
+		install (
+			TARGETS LLVMREGen-s
+			DESTINATION lib
+		)
+	endif ()
+endif ()
+
+if ( LLVMREGEN_BUILD_TESTS )
 	add_subdirectory ( ../Test/DevelMain ../Test/DevelMain )
 endif ()
 
-llvm_map_components_to_libraries ( REQ_LLVM_LIBRARIES bitwriter core interpreter jit native target )
-
-target_link_libraries ( LLVMREGen ${REQ_LLVM_LIBRARIES} ffi )
-
-if ( UNIX )
-	target_link_libraries ( LLVMREGen dl pthread )
-endif ()
-
-if ( WIN32 )
-	install (
-		TARGETS LLVMREGen
-		DESTINATION bin
-		ARCHIVE DESTINATION lib
-	)
-else ()
-	install (
-		TARGETS LLVMREGen
-		DESTINATION lib
-	)
-endif ()
 
 install (
 	FILES LLVMREGen-c.h  LLVMREGen-c-llvm.h  LLVMREGen.h
